[project @ 2005-05-05 20:50:54 by edburns] Merge webtier-alignment HEAD into javaserverfaces-sources HEAD, thereby making javaserverfaces-sources depend on JSP 2.1.
r=jayashri,rogerk,rlubke

SECTION: API Changes

M jsf-api/build.xml

- update version

- rules for including el-api in javadocs

- rules for JSP 2.1 discovery

M jsf-api/doc/actionsource-props.xml
A jsf-api/doc/actionsource2-props.xml
M jsf-api/doc/editable-props.xml
M jsf-api/doc/input-textarea-props.xml
M jsf-api/doc/output-label-props.xml
M jsf-api/doc/standard-html-renderkit.xml
M jsf-api/doc/uicommand-props.xml
M jsf-api/doc/uidata-props.xml
M jsf-api/doc/uigraphic-props.xml
M jsf-api/doc/uimessage-props.xml
M jsf-api/doc/uimessages-props.xml
M jsf-api/doc/uiparameter-props.xml
M jsf-api/doc/uiselectitem-props.xml
M jsf-api/doc/uiselectitems-props.xml
M jsf-api/doc/valueholder-props.xml

- Changes for Unified EL support

M jsf-api/doc/web-facesconfig_1_2.xsd

- add el-resolver element.

M jsf-api/src/javax/faces/application/Application.java

- javadoc change for getActionListener()

- getPropertyResolver() returns head of chain.

- setPropertyResolver() deprecated

- getVariableResolver() returns special wrapper

- setVariableResolver() deprecated

- new methods {add,get}ELResolver().

- createComponent() that takes ValueBinding is deprecated.

- new method createComponent() that takes a ValueExpression.

- new methods getExpressionFactory(), evaluateExpressionGet()

- createMethodBinding() deprecated

- new method addELContextListener()

- new method removeELContextListener()

- new method getELContextListeners()

- createValueBinding() deprecated.

M jsf-api/src/javax/faces/component/ActionSource.java

- deprecate methods using old EL.  Document wrapping behavior

A jsf-api/src/javax/faces/component/ActionSource2.java

- new class, an EL version of ActionSource.

M jsf-api/src/javax/faces/component/EditableValueHolder.java

- Use Unified EL instead of Faces EL.

A jsf-api/src/javax/faces/component